--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      const socket = io();
 
-      var form = document.getElementById('form');
-      var input = document.getElementById('input');
+      const messages = document.getElementById('messages');
+      const form = document.getElementById('form');
+      const input = document.getElementById('input');
 
       form.addEventListener('submit', function (e) {
         e.preventDefault();
@@ -71,6 +72,13 @@
           socket.emit('chat message', input.value);
           input.value = '';
         }
+      });
+
+      socket.on('chat message', function (msg) {
+        const item = document.createElement('li');
+        item.textContent = msg;
+        messages.appendChild(item);
+        window.scrollTo(0, document.body.scrollHeight);
       });
     </script>
   </body>
